<resources>
    <string name="app_name">Pinterestt</string>
    <string name="titulo1">Bienvenido a Pinterestt</string>
    <string name="hint1">Email: </string>
    <string name="hint2">contraseña</string>
    <string name="tituloBoton">continuar</string>
    <string name="forgot">¿Olvidaste tu contraseña?</string>
    <string name="Rsuma">Su correo es: </string>
    <string name="Rresta">Su contraseña es: </string>
    <string name="Rmultiplicacion">Gracias por usar patreon</string>
    <string name="operaciones">REGRESAR</string>
    <string name="main">¡BIENVENIDO A PINTERESTT!</string>
    <string name="google">Continuar con Google</string>
    <string name="apple">Continuar con Apple</string>
    <string name="facebook">Continuar con Facebook</string>
    <string name="obien">O bien\n</string>
    <string name="mi_imagen">pe\n</string>
    <string name="mensaje_bienvenida">Bienvenido</string>
    <string name="crear">Escribe tu email y crea una contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="media">Media\n</string>
    <string name="titulo">Titulo</string>
    <string name="escribir">Empieza a escribir...\n</string>
    <string name="atach">Attachments</string>
    <string name="fragBoton">añadir publicacion\n</string>
    <string name="publicacion">nueva publicacion\n</string>

    <string name="bt1">Iniciar sesion</string>
    <string name="bt2">Registrarse</string>
    <string name="username">Nombre de usuario</string>
    <string name="huser">Digite su nombre de usuario</string>
    <string name="hpsw">Digite su contraseña</string>
    <string name="contra">Contraseña</string>
    <string name="hint_buscar">Busca tus ideas</string>
    <string name="nuevapub">Nueva publicacion</string>
    <string name="addpub">Añadir publicacion</string>
    <string name="Contenido">Contenido de la publicacion</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="registro">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="addcoment">Añadir comentario</string>
    <string name="comentario">Escribe tu comentario</string>
    <string name="comentarios">Comentarios</string>


</resources>