<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/bkkk"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvsaludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:padding="16dp"
            android:text="@string/titulo1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/ethuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/huser"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:id="@+id/tvpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/contra"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/ethpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/hpsw"
            />

        <TextView
            android:id="@+id/tvforgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="30dp"
            android:padding="5dp"
            android:text="@string/forgot"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/bt1"
            android:text="@string/bt1"
            android:textColor="@color/white"
            android:textSize="17sp"
            />

        <Button
            android:id="@+id/btregistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/bt2"
            android:text="@string/bt2"
            android:textColor="@color/white"
            android:textSize="17sp"
            />
    </LinearLayout>