<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvContenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Contenido"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btncomentarip"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/comenttt"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
        />

        <Button
            android:id="@+id/btneditarip"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bt1"
            android:text="@string/editar"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:layout_marginHorizontal="8dp"/>

        <Button
            android:id="@+id/btneliminarip"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="@color/bt2"
            android:text="@string/eliminar"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
</LinearLayout>