<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bkkk">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvnuevapub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/nuevapub"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"

            android:hint="@string/titulo"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="#7E7E7E" />

        <EditText
            android:id="@+id/etContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Contenido"
            android:textColorHint="#7E7E7E"
            android:textColor="@android:color/white"
            android:padding="10dp" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPublicaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_marginVertical="25dp"
            />

        <Button
            android:id="@+id/btadd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="80dp"
            android:backgroundTint="@color/bt1"
            android:text="@string/addpub"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

