<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:elevation="4dp"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvcomentarioic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comentario"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:spacing="8dp">

            <Button
                android:id="@+id/btneditaric"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="@color/bt1"
                android:text="@string/editar"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btneliminaric"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="@color/bt2"
                android:text="@string/eliminar"
                android:textColor="@color/black"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>