<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bkkk">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvnuevocomen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/comentarios"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etcomentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comentario"
            android:padding="10dp"
            android:textColor="@color/hints"
            android:textColorHint="@color/hints"
            />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvcomentarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_marginVertical="25dp"
            android:padding="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="80dp">

            <Button
                android:id="@+id/btaddcomentac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/bt1"
                android:text="@string/addcoment"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/btnsalirac"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:src="@drawable/puerta"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

